--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <div>
   <div id="res">
+    {{resDisplay}}
   </div>
   <div id="btns">
     <div class="row">
-      <button class="btns" id="btn0">0</button>
-      <button class="btns" id="btn1">1</button>
-      <button class="btns" id="btnClr">C</button>
-      <button class="btns" id="btnEql">=</button>
+      <button class="btns" id="btn0" (click)='appendDigit("0")'>0</button>
+      <button class="btns" id="btn1" (click)='appendDigit("1")'>1</button>
+      <button class="btns" id="btnClr" (click)="clear()">C</button>
+      <button class="btns" id="btnEql" (click)="evaluate()">=</button>
     </div>
     <div class="row">
-      <button class="btns" id="btnSum">+</button>
-      <button class="btns" id="btnSub">-</button>
-      <button class="btns" id="btnMul">*</button>
-      <button class="btns" id="btnDiv">/</button>
+      <button class="btns" id="btnSum" (click)='appendOperator("+")'>+</button>
+      <button class="btns" id="btnSub" (click)='appendOperator("-")'>-</button>
+      <button class="btns" id="btnMul" (click)='appendOperator("*")'>*</button>
+      <button class="btns" id="btnDiv" (click)='appendOperator("/")'>/</button>
     </div>
   </div>
 </div>
