adding app2.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id='calc'>
   <div id="res">
     {{resDisplay}}
   </div>
@@ -17,3 +17,5 @@
     </div>
   </div>
 </div>
+
+<app-app2></app-app2>
